--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,20 @@
     font-family: "Poppins", sans-serif
 }
 
+.navbar{
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 255, 255, 0.591);
+}
 
+.navbar nav{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
 
