--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,8 @@
     padding: 0;
     font-family: "Poppins", sans-serif
 }
-
 /*============= NAVBAR ===========*/
-
-.navbar{
+.navbar {
     width: 100%;
     height: 5rem;
     display: flex;
@@ -16,7 +14,7 @@
     background-color: rgba(0, 255, 255, 0.591);
 }
 
-.navbar nav{
+.navbar nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -24,13 +22,13 @@
     position: relative;
 }
 
-.navbar nav .navContainer{    
+.navbar nav .navContainer {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.navbar nav .navContainer ul{    
+.navbar nav .navContainer ul {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,13 +38,12 @@
     list-style: none;
 }
 
-.navbar nav .navContainer ul a{    
+.navbar nav .navContainer ul a {
     text-decoration: none;
     transition: 1s;
 }
 
-.navbar nav .navContainer ul a:hover{ 
-    text-decoration: none;   
+.navbar nav .navContainer ul a:hover {
     color: black;
 }
 
@@ -56,18 +53,18 @@
     align-items: center;
 }
 
-.navbar nav .navContainerForSmallScreen{
-    display: flex;
-    position: absolute;
+.navbar nav .navContainerForSmallScreen {
+    display: none;
     background-color: rgba(0, 0, 0, 0.501);
     width: 100%;
     height: calc(100vh - 80px);
-    left: -120em;
+    position: absolute;
+    top: 80px;
+    left: 0;
     list-style: none;
-    transition: 1s;
 }
 
-.navbar nav .navContainerForSmallScreen ul{
+.navbar nav .navContainerForSmallScreen ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -79,31 +76,14 @@
     list-style: none;
 }
 
-.navbar nav .navContainerForSmallScreen ul{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    top: 70px;
-    gap: 30px;
-    font-size: 22px;
-    font-weight: 250;
-    list-style: none;
-}
-
-.navbar nav .navContainerForSmallScreen ul{
-    text-decoration: none;
-    transition: 0.5s;
-}
-
-.navbar nav .navContainerForSmallScreen ul a{
-    text-decoration: none; 
+.navbar nav .navContainerForSmallScreen ul a {
     color: black;
+    text-decoration: none;
 }
 
-/*============ ALL MEDIA QUERY ===========*/
-/**== sm screen ==**/
+/*============= ALL MEDIA QUERY ===========*/
+
+/**  sm screen  **/
 @media (min-width: 640px){
     .navbar nav{
       padding: 0 32px 0 32px;
@@ -115,27 +95,26 @@
   }
   
   
-  /**== md screen ==**/
+  /**  md screen  **/
   @media (min-width: 768px){
     .navbar nav{
       padding: 0 32px 0 32px;
     }
-      
-    .navbar nav .navContainer{
-        display: flex;
-        width: min-content;
-      }
-    
     .navbar nav .navContainerForSmallScreen {
       display: none;
     }
-
+  
+    .navbar nav .navContainer{
+      display: flex;
+      width: min-content;
+    }
+  
     .navbar nav .navContainerForSm{
       display: none;
-    } 
+    }
   }
   
-  /**== lg screen ==**/
+  /**  lg screen  **/
   @media (min-width: 1024px){
     .navbar nav{
       padding: 0 64px 0 64px;
@@ -144,19 +123,18 @@
     .navbar nav .navContainer ul{
       gap: 50px;
     }
-
   }
   
-  /**== xl screen ==**/
+  /**  xl screen  **/
   @media (min-width: 1280px){
     .navbar nav{
       padding: 0 128px 0 128px;
     }
   }
   
-  /**== 2xl screen ==**/
+  /**  2xl screen  **/
   @media (min-width: 1536px){
     .navbar nav{
       padding: 0 256px 0 256px;
-    }  
-  }
+    }
+    }
