--- a/css/style.css
+++ b/css/style.css
@@ -1,140 +1,149 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
-/*============= NAVBAR ===========*/
-.navbar {
-    width: 100%;
-    height: 5rem;
+
+/*** NAVBAR ***/
+.navbar{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  background-color: rgba(127, 255, 212, 0.669);
+}
+
+.navbar nav{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px 0 16px;
+  position: relative;
+}
+
+.navbar nav .navContainer{
+  display: none;
+  align-items: center;
+  width: 100%;
+  
+}
+
+.navbar nav .navContainer ul{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 255, 255, 0.591);
-}
-
-.navbar nav {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-}
-
-.navbar nav .navContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.navbar nav .navContainer ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
+    gap: 20px;
     font-size: 16px;
     font-weight: 250;
     list-style: none;
-}
-
-.navbar nav .navContainer ul a {
+  }
+  
+  .navbar nav .navContainer ul  li a{
     text-decoration: none;
-    transition: 1s;
-}
-
-.navbar nav .navContainer ul a:hover {
+    transition: 0.5s;
+  }
+  
+  .navbar nav .navContainer ul  li a:hover{
     color: black;
-}
+  }
 
 .navbar nav .navContainerForSm{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar nav .navContainerForSmallScreen {
-    display: none;
-    background-color: rgba(0, 0, 0, 0.501);
-    width: 100%;
-    height: calc(100vh - 80px);
-    position: absolute;
-    top: 80px;
-    left: 0;
-    list-style: none;
+  display: flex;
+  position: absolute;
+  width: 100%;
+  top: 70px;
+  left: -120rem;
+  height: calc(100vh - 80px);
+  list-style: none;
+  transition: left 1s;
 }
-
 .navbar nav .navContainerForSmallScreen ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    gap: 30px;
-    font-size: 22px;
-    font-weight: 250;
-    list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
+  font-size: 22px;
+  font-weight: 250;
+  width: 100%;
+  list-style: none;
 }
 
-.navbar nav .navContainerForSmallScreen ul a {
-    color: black;
-    text-decoration: none;
+.navbar nav .navContainerForSmallScreen ul  li a{
+  text-decoration: none;
+  transition: 0.5s;
 }
 
-/*============= ALL MEDIA QUERY ===========*/
+.navbar nav .navContainerForSmallScreen ul  li a:hover{
+  text-decoration: none;
+  transform: scale(1.250) translateY(-5px);
+}
 
-/**  sm screen  **/
+
+/**==================  All media guery  ===========**/
+
+/**  screen  sm  **/
 @media (min-width: 640px){
-    .navbar nav{
-      padding: 0 32px 0 32px;
-    }
-  
-    .navbar nav .navContainer {
-      display: none;
-    }
+  .navbar nav{
+    padding: 0 32px 0 32px;
   }
-  
-  
-  /**  md screen  **/
-  @media (min-width: 768px){
-    .navbar nav{
-      padding: 0 32px 0 32px;
-    }
-    .navbar nav .navContainerForSmallScreen {
-      display: none;
-    }
-  
-    .navbar nav .navContainer{
-      display: flex;
-      width: min-content;
-    }
-  
-    .navbar nav .navContainerForSm{
-      display: none;
-    }
+
+  .navbar nav .navContainer {
+    display: none;
   }
-  
-  /**  lg screen  **/
-  @media (min-width: 1024px){
-    .navbar nav{
-      padding: 0 64px 0 64px;
-    }
-  
-    .navbar nav .navContainer ul{
-      gap: 50px;
-    }
+}
+
+
+/**  screen  md  **/
+@media (min-width: 768px){
+  .navbar nav{
+    padding: 0 32px 0 32px;
   }
-  
-  /**  xl screen  **/
-  @media (min-width: 1280px){
-    .navbar nav{
-      padding: 0 128px 0 128px;
-    }
+  .navbar nav .navContainerForSmallScreen {
+    display: none;
   }
-  
-  /**  2xl screen  **/
-  @media (min-width: 1536px){
-    .navbar nav{
-      padding: 0 256px 0 256px;
+
+  .navbar nav .navContainer{
+    display: flex;
+    width: min-content;
+  }
+
+  .navbar nav .navContainerForSm{
+    display: none;
+  }
+}
+
+/**  screen  lg  **/
+@media (min-width: 1024px){
+  .navbar nav{
+    padding: 0 64px 0 64px;
+  }
+
+  .navbar nav .navContainer ul{
+    gap: 50px;
+  }
+}
+
+/**  screen  xl  **/
+@media (min-width: 1280px){
+  .navbar nav{
+    padding: 0 128px 0 128px;
+  }
+}
+
+/**  screen  2xl  **/
+@media (min-width: 1536px){
+  .navbar nav{
+    padding: 0 256px 0 256px;
     }
-    }
+}
