--- a/css/style.css
+++ b/css/style.css
@@ -35,20 +35,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    font-size: 16px;
-    font-weight: 250;
     list-style: none;
+    gap: 3rem;
+    height: 24px;
   }
   
   .navbar nav .navContainer ul  li a{
+    font-size: 16px;
+    font-weight: 400;
+    color: #505F98;
     text-decoration: none;
-    color: black;
     transition: 0.5s;
   }
   
   .navbar nav .navContainer ul  li a:hover{
-    color: white;
+    color: #505F98;
   }
 
 .navbar nav .navContainerForSm{
@@ -96,18 +97,20 @@
   font-size: 26px;
   font-weight: 900;
   color: #505F98;
+  letter-spacing: 1.1px;
 }
 
 .navbar nav .navbtn button{
   background-color: #111b47;
   color: white;
-  border: none;
+  border: 2px solid #111b47;
+  text-align: center;
   width: 160px;
-  height: 18px;
+  height: 35px;
   font-size: 16px;
   font-weight: 500;
-  /* line-height: 18px; */
-  padding: 16px;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 
 /**============ HERO SECTION =========**/
@@ -152,8 +155,12 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 26px;
+  letter-spacing: 1px;
   text-align: center;
+  color: #091133;
+  background-color: transparent;
   border: 2px solid #111b47;
+  cursor: pointer;
 }
 
 .heroSection .img {
@@ -164,6 +171,18 @@
   width: 45rem;
   height: 40rem;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /**========  All media guery  ======**/
