--- a/css/style.css
+++ b/css/style.css
@@ -243,9 +243,73 @@ p{
 }
 
 
+/**========== FOOTER SECTION ========**/
+.footerSection{
+  width: 100%;
+  height: 20rem;
+  background-color: #e7ecff;
+}
+
+.footerSection footer{
+  width: 90%;
+}
+
+.footerSection footer .container-1{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 
+.footerSection footer .container-1 h1{
+  font-size: 26px;
+  font-weight: 900;
+  color: #505F98;
+  letter-spacing: 1.1px;
+}
 
+.footerSection footer .container-1 button{
+  background-color: #111b47;
+  color: white;
+  border: 2px solid #111b47;
+  text-align: center;
+  width: 160px;
+  height: 35px;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+
+.footerSection footer .container-2{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footerSection footer .container-2 .iconContainer a{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footerSection footer .container-2 .menu ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  gap: 3rem;
+  height: 24px;
+}
+
+.footerSection footer .container-2 .menu ul li a{
+  font-size: 16px;
+  font-weight: 400;
+  color: #505F98;
+  text-decoration: none;
+  transition: 0.5s;
+}
 
 
 
