--- a/css/style.css
+++ b/css/style.css
@@ -256,11 +256,28 @@ p{
   align-self: center;
 }
 
+.fithSection .fithSectionContainer h2{
+  color: #222f65;
+}
+
+.fithSection .fithSectionContainer button{
+  background-color: #111b47;
+  color: white;
+  border: 2px solid #111b47;
+  text-align: center;
+  width: 160px;
+  height: 35px;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
 
 /**========== FOOTER SECTION ========**/
 .footerSection{
   width: 100%;
-  height: 20rem;
+  height: 10rem;
   background-color: #e7ecff;
 }
 
@@ -332,7 +349,6 @@ p{
 }
 
 .footerSection footer .container-2 .iconContainer a{
- border: 2px solid red;
  border-radius: 100%;
  width: 25px;
  height: 25px;
@@ -344,20 +360,20 @@ p{
 }
 
 .footerSection footer .container-2 .iconContainer a:hover{
- background-color: red;
- box-shadow: 0 0 25px red;
+ background-color: #b0b8bc;
+ box-shadow: 0 0 25px #b0b8bc;
  transform: scale(1.250) translateY(-5px);
 }
 
 .footerSection footer .container-2 .iconContainer a svg{
-  fill: red;
+  fill: #b0b8bc;
   height: 20px;
   width: 20px;
   transition: 0.5s;
  }
 
  .footerSection footer .container-2 .iconContainer a:hover svg{
-  fill: black;
+  fill: #111b47;
  }
 
 
@@ -374,7 +390,9 @@ p{
   .navbar nav .navContainer {
     display: none;
   }
-
+  .heroSection .textContainer{
+    padding: 0 32px 0 32px;
+  }
   .fstSection .fstSectionContainer{
     padding: 0 32px 0 32px;
   }
@@ -411,7 +429,9 @@ p{
   .navbar nav .navContainerForSm{
     display: none;
   }
-
+  .heroSection .textContainer{
+    padding: 0 32px 0 32px;
+  }
   .fstSection .fstSectionContainer{
     padding: 0 32px 0 32px;
   }
@@ -440,7 +460,9 @@ p{
   .navbar nav .navContainer ul{
     gap: 50px;
   }
-  
+  .heroSection .textContainer{
+    padding: 0 64px 0 64px;
+  }
   .fstSection .fstSectionContainer{
     padding: 0 64px 0 64px;
   }
@@ -457,7 +479,7 @@ p{
     padding: 0 64px 0 64px;
   }
   .footerSection footer{
-    padding: 0 64px 0 64px;
+    padding: 0px 64px 0 64px;
   }
   
 }
@@ -467,7 +489,9 @@ p{
   .navbar nav{
     padding: 0 128px 0 128px;
   }
-
+  .heroSection .textContainer{
+    padding: 0 128px 0 128px;
+  }
   .fstSection .fstSectionContainer{
     padding: 0 128px 0 128px;
   }
@@ -493,7 +517,9 @@ p{
   .navbar nav{
     padding: 0 256px 0 256px;
     }
-
+    .heroSection .textContainer{
+      padding: 0 256px 0 256px;
+    }
     .fstSection .fstSectionContainer{
       padding: 0 256px 0 256px;
     }
