--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
   justify-content: center;
   align-items: center;
   height: 5rem;
+  position: absolute;
+  z-index: 10;
 }
 
 .navbar nav{
@@ -133,7 +135,15 @@ p{
 /**============ HERO SECTION =========**/
 .heroSection{
   width: 100%;
-  height: 100vh;
+  height: 69rem;
+  background-image: url(/Image/Path.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  position: relative;
+  z-index: 1;
+}
+
+.heroSection .heroSectionContainer{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,6 +151,8 @@ p{
 
 .heroSection .textContainer{
   width: 50%;
+  position: relative;
+  top: 10rem;
 }
 
 /* .heroSection .textContainer h1{
@@ -185,14 +197,16 @@ p{
 }
 
 .heroSection .img img{
-  width: 45rem;
-  height: 40rem;
+  width: 40rem;
+  height: 50rem;
+  position: relative;
+  top: 12rem;
 }
 
 /**========== FIRST SECTION ========**/
 .fstSection{
   width: 100%;
-  height: 30rem;
+  height: 35rem;
 }
 
 .fstSection .fstSectionContainer{
@@ -205,7 +219,7 @@ p{
 /**========== SECOND SECTION ========**/
 .sndSection{
   width: 100%;
-  height: 30rem;
+  height: 35rem;
 }
 
 .sndSection .sndSectionContainer{
@@ -219,7 +233,7 @@ p{
 /**========== THIRD SECTION ========**/
 .trdSection{
   width: 100%;
-  height: 30rem;
+  height: 35rem;
 }
 
 .trdSection .trdSectionContainer{
@@ -233,7 +247,7 @@ p{
 /**========== FOURTH SECTION ========**/
 .fthSection{
   width: 100%;
-  height: 30rem;
+  height: 35rem;
 }
 
 .fthSection .fthSectionContainer{
