--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 130px;
 } 
 
 
@@ -233,6 +234,7 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 100px;
 }
 
 
@@ -247,6 +249,7 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 40px;
 }
 
 
@@ -261,6 +264,7 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 130px;
 }
 
 /**========== FIFTH SECTION ========**/
@@ -275,6 +279,7 @@ p{
   flex-direction: column;
   justify-content: center;
   align-self: center;
+  gap: 10px;
 }
 
 .fithSection .fithSectionContainer h2{
