--- a/css/style.css
+++ b/css/style.css
@@ -339,8 +339,6 @@ p{
   border: 1px solid #091133;
 }
 
-
-
 /**========== FOOTER SECTION ========**/
 .footerSection{
   width: 100%;
@@ -449,10 +447,6 @@ p{
   fill: #111b47;
  }
 
-
-
-
-
 /**========  All media guery  ======**/
 
 /**==  sm screen ==**/
@@ -463,7 +457,11 @@ p{
   .navbar nav .navContainer {
     display: none;
   }
-
+  .textContainer{
+    text-align: center;
+   width: 90%;
+  }
+  /**============ HERO SECTION =========**/
   .heroSection{
     padding: 0;
     background-image: none;
@@ -473,7 +471,6 @@ p{
   .heroSection .heroSectionContainer{
     flex-direction: column;
   }
-
   .heroSection .img img{
     width: 100%;
     height: 30%;
@@ -481,27 +478,43 @@ p{
     justify-content: center;
     align-items: center;
   }
-
   .heroSection .heroSectionContainer .textContainer{
    text-align: center;
    width: 90%;
   }
-
+    /**========== FIRST SECTION ========**/
+    .fstSection{
+      height: 45rem;
+    }
   .fstSection .fstSectionContainer{
-    padding: 0 32px 0 32px;
+    flex-direction: column;
+  }
+  /**========== SECOND SECTION ========**/
+  .sndSection{
+    height: 45rem;
   }
   .sndSection .sndSectionContainer{
-    padding: 0 32px 0 32px;
+    flex-direction: column-reverse;
   }
+  /**========== THIRD SECTION ========**/
+  .trdSection{
+    height: 45rem;
+  }  
   .trdSection .trdSectionContainer{
-    padding: 0 32px 0 32px;
+    flex-direction: column-reverse;
   }
+  /**========== FOURTH SECTION ========**/
+  .fthSection{
+    height: 45rem;
+  }  
   .fthSection .fthSectionContainer{
-    padding: 0 32px 0 32px;
+    flex-direction: column-reverse;
   }
+  /**========== FIFTH SECTION ========**/
   .fithSection .fithSectionContainer{
     padding: 0 32px 0 32px;
   }
+  /**========== FOOTER SECTION ========**/
   .footerSection footer{
     padding: 0 32px 0 32px;
   }
